2008-02-28  Satoshi Nakagawa <artension@gmail.com>

	Now a scroll position is kept when received a new line and removed the first line.
	Added [] and []= method for DOM classes.

2008-02-27  Satoshi Nakagawa <artension@gmail.com>

	Added "colornumber" attribute to span.sender for coloring each nick with different colors.
	Added "highlight" attribute to set style for highlighted lines.

2008-02-27  Satoshi Nakagawa <artension@gmail.com>

	Added "identified" attribute in log view's html for CAPAB IDENTIFY-MSG support.

2008-02-27  Satoshi Nakagawa <artension@gmail.com>

	Added support for CAPAB IDENTIFY-MSG and CAPAB IDENTIFY-CTCP.

==== LimeChat 0.16.4 ====

2008-02-26  Satoshi Nakagawa <artension@gmail.com>

	Tweaked the preferences dialog and the server properties dialog.

2008-02-26  Satoshi Nakagawa <artension@gmail.com>

	Changed the directory name, from "Theme" to "Themes".
	Added migration code in prelude.

2008-02-26  Satoshi Nakagawa <artension@gmail.com>

	Added a menu item, "Mark All as Read".

2008-02-26  Satoshi Nakagawa <artension@gmail.com>

	New style action messages.
	Fixed wrong css selectors in all themes.
	Changed the default nick format to '%n: '.

2008-02-26  Satoshi Nakagawa <artension@gmail.com>

	Changed to remember the current text if modified when pushed up key.

2008-02-26  Satoshi Nakagawa <artension@gmail.com>

	Updated the bundled themes to conform to the new css style.
	Added all attributes in <body> to <html>.

2008-02-26  Satoshi Nakagawa <artension@gmail.com>

	Added "channelname" and "type" attribute for more control with css.
	Updated "Alternate Lines" theme to conform to the new css style.

2008-02-25  Satoshi Nakagawa <artension@gmail.com>

	Changed shortcut key for "Mark Scrollback" to cmd+L, and "Clear Mark" to cmd+shift+L as well.

2008-02-25  Satoshi Nakagawa <artension@gmail.com>

	Added "Copy Console Log as HTML" menu item.
	Reformed main menu.

2008-02-25  Satoshi Nakagawa <artension@gmail.com>
