@@ -37,6 +37,6 @@
 	<key>showFileHierarchyDrawer</key>
 	<true/>
 	<key>windowFrame</key>
-	<string>{{578, 74}, {1154, 1100}}</string>
+	<string>{{699, 77}, {949, 1101}}</string>
 </dict>
 </plist>
