@@ -1,5 +1,9 @@
 2008-02-28  Satoshi Nakagawa <artension@gmail.com>
 
+	Now 401 error is printed in a talk log when there is a talk item for the target.
+
+2008-02-28  Satoshi Nakagawa <artension@gmail.com>
+
 	Now a scroll position is kept when received a new line and removed the first line.
 	Added [] and []= method for DOM classes.
 
